--- a/debian/nvidia-kernel-source.README.Debian.in
+++ b/debian/nvidia-kernel-source.README.Debian.in
@@ -143,7 +143,8 @@ Notes for method #2:
 
 - The Riva framebuffer is known to conflict with the nvidia X driver. If you
 are using X it would be wise not to compile it in. The vesa framebuffer is
-known to work slow but fine.
+known to work in some cases, and not in others. (people have recently been
+having problems with the vesa driver as well) 
 
 GENERAL NOTES:
 
