--- a/debian/rules
+++ b/debian/rules
@@ -135,7 +135,7 @@ install: build-stamp build-kernel-stamp
 
 	install -m 0644 $(dirname)/usr/include/GL/glx.h \
 		$(CURDIR)/debian/nvidia-glx-dev/usr/share/doc/nvidia-glx-dev/include/GL
-	install -m 0644 $(dirname)/usr/include/GL/glxtokens.h \
+	install -m 0644 $(dirname)/usr/include/GL/glxext.h \
 		$(CURDIR)/debian/nvidia-glx-dev/usr/share/doc/nvidia-glx-dev/include/GL
 
 	install -m 0644 $(dirname)/usr/lib/libGL.so.${version} \
