--- a/debian/control.in
+++ b/debian/control.in
@@ -3,45 +3,60 @@ Section: non-free/x11
 Priority: optional
 Maintainer: Randall Donald <rdonald@debian.org>
 Build-Depends: debhelper (>> 4.0.0), sed (>> 3.0)
-Standards-Version: 3.6.1
+Standards-Version: 3.6.2
+
 
 Package: nvidia-glx-ia32
 Architecture: amd64
 Depends: nvidia-kernel-#VERSION#, ia32-libs, ${shlibs:Depends}
-Recommends: nvidia-kernel-source (>= #VERSION#)
-Suggests: nvidia-settings
+Suggests: nvidia-settings, nvidia-kernel-source (>= #VERSION#)
 Conflicts: nvidia-glx-src
 Replaces: nvidia-glx-src
 Provides: xserver
 Description: NVIDIA binary XFree86 4.x driver
  These XFree86 4.0 binary drivers provide optimized hardware acceleration of
- OpenGL applications via a direct-rendering X Server and support the TNT,
- TNT2, TNT Ultra, GeForce, nForce and Quadro chipsets. AGP, TV-out and
+ OpenGL applications via a direct-rendering X Server. AGP, TV-out and
  flat panel displays are also supported.
+ .
+ Cards NOT supported by this driver are
+ .
+ TNT, TNT2, Vanta, GeForce 256, GeForce DDR,
+ Quadro, GeForce2 Pro, GeForce2 GTS, 
+ GeForce2 Ultra, GeForce2 Ti, Quadro2 Pro
+ .
+ See /usr/share/doc/nvidia-glx/README.txt.gz for a complete list 
+ of supported GPUs.
  .
  Please see the nvidia-kernel-source package for building the kernel module
  required by this package.
 
 Package: nvidia-glx
 Architecture: i386 amd64
-Depends: nvidia-kernel-#VERSION#, xserver-common (>= 4.0.3), xlibmesa-glu | libglu | libglu1, ${shlibs:Depends}
-Recommends: nvidia-kernel-source (>= #VERSION#)
-Suggests: nvidia-settings
+Depends: nvidia-kernel-#VERSION#, xserver-common (>= 4.0.3), ${shlibs:Depends}
+Suggests: nvidia-settings, nvidia-kernel-source (>= #VERSION#)
 Conflicts: nvidia-glx-src
 Replaces: nvidia-glx-src
 Provides: xserver
 Description: NVIDIA binary XFree86 4.x driver
  These XFree86 4.0 binary drivers provide optimized hardware acceleration of
- OpenGL applications via a direct-rendering X Server and support the TNT,
- TNT2, TNT Ultra, GeForce, nForce and Quadro chipsets. AGP, TV-out and
+ OpenGL applications via a direct-rendering X Server. AGP, TV-out and
  flat panel displays are also supported.
+ .
+ Cards NOT supported by this driver are
+ .
+ TNT, TNT2, Vanta, GeForce 256, GeForce DDR,
+ Quadro, GeForce2 Pro, GeForce2 GTS, 
+ GeForce2 Ultra, GeForce2 Ti, Quadro2 Pro
+ .
+ See /usr/share/doc/nvidia-glx/README.txt.gz for a complete list 
+ of supported GPUs.
  .
  Please see the nvidia-kernel-source package for building the kernel module
  required by this package.
  
 Package: nvidia-glx-dev
 Architecture: i386 amd64
-Depends: nvidia-glx (>= #VERSION#), xlibmesa-gl-dev | libgl-dev, xlibmesa-glu-dev | libglu-dev
+Depends: nvidia-glx (>= #VERSION#), xlibmesa-gl-dev | libgl-dev
 Description: NVIDIA binary XFree86 4.x driver development files
  This package contains the NVIDIA binary XFree86 4.x driver
  development files.
@@ -58,10 +73,18 @@ Replaces: nvidia-kernel-src
 Description: NVIDIA binary kernel module source
  This package builds the NVIDIA XFree86 4.x binary kernel module needed
  by nvidia-glx. The drivers provide optimized hardware acceleration of OpenGL
- applications via a direct-rendering X Server and support the TNT,
- TNT2, TNT Ultra, The GeForce series, nForce, and Quadro chipsets. AGP,
+ applications via a direct-rendering X Server AGP,
  TV-out, and flat panel displays are also supported.
+ .
+ Cards NOT supported by this driver are
+ .
+ TNT, TNT2, Vanta, GeForce 256, GeForce DDR,
+ Quadro, GeForce2 Pro, GeForce2 GTS, 
+ GeForce2 Ultra, GeForce2 Ti, Quadro2 Pro
+ .
+ See /usr/share/doc/nvidia-kernel-source/README.txt.gz for a complete list 
+ of supported GPUs.
  .
  PLEASE read /usr/share/doc/nvidia-kernel-source/README.Debian for building
  information.
-
+ .
