--- a/debian.binary/control.template
+++ b/debian.binary/control.template
@@ -8,7 +8,7 @@ Standards-Version: 3.6.0
 Package: nvidia-kernel-#KVERS#
 Architecture: i386 amd64
 Provides: nvidia-kernel-#VERSION#
-Depends: nvidia-kernel-common (>= #VERSION#)
+Depends: nvidia-kernel-common (>= 20050829)
 Recommends: kernel-image-#KVERS#
 Description: NVIDIA binary kernel module for Linux #KVERS#
  These XFree86 4.0 binary drivers provide optimized hardware acceleration of 
