--- a/debian/nvidia-glx-dev.links.in
+++ b/debian/nvidia-glx-dev.links.in
@@ -1,1 +1,3 @@
 usr/share/nvidia/includes /usr/share/doc/nvidia-glx-dev/includes
+usr/lib/libGL.so.#VERSION# usr/lib/libGL.so
+usr/share/nvidia/include /usr/share/doc/nvidia-glx-dev/include
