Import Debian changes 1.0.8174-1

--- a/debian/control
+++ b/debian/control
@@ -8,8 +8,8 @@ Standards-Version: 3.6.2
 
 Package: nvidia-glx-ia32
 Architecture: amd64
-Depends: nvidia-kernel-1.0.7676, ia32-libs, ${shlibs:Depends}
-Suggests: nvidia-settings, nvidia-kernel-source (>= 1.0.7676)
+Depends: nvidia-kernel-1.0.8174, ia32-libs, ${shlibs:Depends}
+Suggests: nvidia-settings, nvidia-kernel-source (>= 1.0.8174)
 Conflicts: nvidia-glx-src
 Replaces: nvidia-glx-src
 Description: NVIDIA binary XFree86 4.x driver
@@ -31,14 +31,14 @@ Description: NVIDIA binary XFree86 4.x driver
 
 Package: nvidia-glx
 Architecture: i386 amd64
-Depends: nvidia-kernel-1.0.7676, xserver-common (>= 4.0.3), ${shlibs:Depends}
-Suggests: nvidia-settings, nvidia-kernel-source (>= 1.0.7676)
+Depends: nvidia-kernel-1.0.8174, xserver-common (>= 4.0.3), ${shlibs:Depends}
+Suggests: nvidia-settings, nvidia-kernel-source (>= 1.0.8174)
 Conflicts: nvidia-glx-src
 Replaces: nvidia-glx-src
 Description: NVIDIA binary XFree86 4.x driver
- These XFree86 4.0 binary drivers provide optimized hardware acceleration of
- OpenGL applications via a direct-rendering X Server. AGP, TV-out and
- flat panel displays are also supported.
+ These XFree86 4.0 / Xorg 6.8 binary drivers provide optimized hardware 
+ acceleration of  OpenGL applications via a direct-rendering X Server. 
+ AGP, PCIe, SLI, TV-out and flat panel displays are also supported.
  .
  Cards NOT supported by this driver are
  .
@@ -54,7 +54,7 @@ Description: NVIDIA binary XFree86 4.x driver
  
 Package: nvidia-glx-dev
 Architecture: i386 amd64
-Depends: nvidia-glx (>= 1.0.7676), xlibmesa-gl-dev | libgl-dev
+Depends: nvidia-glx (>= 1.0.8174), xlibmesa-gl-dev | libgl-dev
 Description: NVIDIA binary XFree86 4.x driver development files
  This package contains the NVIDIA binary XFree86 4.x driver
  development files.
@@ -65,14 +65,14 @@ Description: NVIDIA binary XFree86 4.x driver development files
 Package: nvidia-kernel-source
 Architecture: i386 amd64
 Depends: debhelper (>> 4.0.0), make, sed (>> 3.0), dpatch (>= 2.0.0)
-Recommends: nvidia-glx (>= 1.0.7676), kernel-package (>= 8.082), devscripts
+Recommends: nvidia-glx (>= 1.0.8174), kernel-package (>= 8.082), devscripts
 Conflicts: nvidia-kernel-src
 Replaces: nvidia-kernel-src
 Description: NVIDIA binary kernel module source
- This package builds the NVIDIA XFree86 4.x binary kernel module needed
- by nvidia-glx. The drivers provide optimized hardware acceleration of OpenGL
- applications via a direct-rendering X Server AGP,
- TV-out, and flat panel displays are also supported.
+ This package builds the NVIDIA XFree86 4.x / Xorg 6.8 binary kernel module 
+ needed  by nvidia-glx. The drivers provide optimized hardware acceleration 
+ of OpenGL applications via a direct-rendering X Server AGP,
+ PCIe, SLI, TV-out, and flat panel displays are also supported.
  .
  Cards NOT supported by this driver are
  .
