--- a/debian/control.in
+++ b/debian/control.in
@@ -2,7 +2,7 @@ Source: nvidia-graphics-drivers
 Section: non-free/x11
 Priority: optional
 Maintainer: Randall Donald <rdonald@debian.org>
-Build-Depends: debhelper (>> 5.0.0), sed (>> 3.0)
+Build-Depends: debhelper (>> 4.0.0), sed (>> 3.0)
 Standards-Version: 3.6.2
 
 
@@ -36,7 +36,7 @@ Suggests: nvidia-settings, nvidia-kernel-source (>= #VERSION#)
 Conflicts: nvidia-glx-src
 Replaces: nvidia-glx-src
 Description: NVIDIA binary XFree86 4.x driver
- These XFree86 4.0 / Xorg 6.8 binary drivers provide optimized hardware 
+ These XFree86 4.0 / Xorg binary drivers provide optimized hardware 
  acceleration of  OpenGL applications via a direct-rendering X Server. 
  AGP, PCIe, SLI, TV-out and flat panel displays are also supported.
  .
@@ -54,9 +54,11 @@ Description: NVIDIA binary XFree86 4.x driver
  
 Package: nvidia-glx-dev
 Architecture: i386 amd64
-Depends: nvidia-glx (>= #VERSION#), xlibmesa-gl-dev | libgl-dev
-Description: NVIDIA binary XFree86 4.x driver development files
- This package contains the NVIDIA binary XFree86 4.x driver
+Depends: nvidia-glx (>= #VERSION#)
+Conflicts: nvidia-glx (>= #NEXTVER#), libgl-dev
+Replaces: libgl-dev
+Description: NVIDIA binary XFree86 4.x / Xorg driver development files
+ This package contains the NVIDIA binary XFree86 4.x and Xorg driver
  development files.
  .
  For more information on this source package visit NVIDIA's homepage
@@ -69,7 +71,7 @@ Recommends: nvidia-glx (>= #VERSION#), kernel-package (>= 8.082), devscripts
 Conflicts: nvidia-kernel-src
 Replaces: nvidia-kernel-src
 Description: NVIDIA binary kernel module source
- This package builds the NVIDIA XFree86 4.x / Xorg 6.8 binary kernel module 
+ This package builds the NVIDIA XFree86 4.x / Xorg  binary kernel module 
  needed  by nvidia-glx. The drivers provide optimized hardware acceleration 
  of OpenGL applications via a direct-rendering X Server AGP,
  PCIe, SLI, TV-out, and flat panel displays are also supported.
