Import Debian changes 1.0.8756-2

--- a/debian/control
+++ b/debian/control
@@ -55,6 +55,7 @@ Description: NVIDIA binary XFree86 4.x driver
 Package: nvidia-glx-dev
 Architecture: i386 amd64
 Depends: nvidia-glx (>= 1.0.8756)
+Provides: libgl-dev
 Conflicts: nvidia-glx (>= 1.0.8757), libgl-dev
 Replaces: libgl-dev
 Description: NVIDIA binary XFree86 4.x / Xorg driver development files
