--- a/debian/control.in
+++ b/debian/control.in
@@ -31,9 +31,10 @@ Description: NVIDIA binary XFree86 4.x driver
 
 Package: nvidia-glx
 Architecture: i386 amd64
-Depends: nvidia-kernel-#VERSION#, xserver-common (>= 4.0.3), ${shlibs:Depends}
+Depends: nvidia-kernel-#VERSION#, x11-common (>= 1:7.0.0), ${shlibs:Depends}
 Suggests: nvidia-settings, nvidia-kernel-source (>= #VERSION#)
 Conflicts: nvidia-glx-src
+Provides: xserver-xorg-video
 Replaces: nvidia-glx-src
 Description: NVIDIA binary XFree86 4.x driver
  These XFree86 4.0 / Xorg binary drivers provide optimized hardware 
