--- a/debian/control.in
+++ b/debian/control.in
@@ -57,7 +57,7 @@ Package: nvidia-glx-dev
 Architecture: i386 amd64
 Depends: nvidia-glx (>= #VERSION#)
 Provides: libgl-dev
-Conflicts: nvidia-glx (>= #NEXTVER#), libgl-dev
+Conflicts: nvidia-glx (>= #NEXTVER#), libgl-dev, mesa-common-dev
 Replaces: libgl-dev
 Description: NVIDIA binary XFree86 4.x / Xorg driver development files
  This package contains the NVIDIA binary XFree86 4.x and Xorg driver
