--- a/debian.binary/rules
+++ b/debian.binary/rules
@@ -202,7 +202,7 @@ binary_modules: build install
 #	dh_installexamples
 #	dh_installmanpages
 #	dh_undocumented
-#	dh_installmodules
+	dh_installmodules
 
 	dh_installinit
 	
