nvidia-glx provides xserver-xorg-video-1.0 for experimental
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@34 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control.in
+++ b/debian/control.in
@@ -34,7 +34,7 @@ Architecture: i386 amd64
 Depends: nvidia-kernel-#VERSION#, x11-common (>= 1:7.0.0), ${shlibs:Depends}
 Suggests: nvidia-settings, nvidia-kernel-source (>= #VERSION#)
 Conflicts: nvidia-glx-src
-Provides: xserver-xorg-video
+Provides: xserver-xorg-video-1.0
 Replaces: nvidia-glx-src
 Description: NVIDIA binary XFree86 4.x driver
  These XFree86 4.0 / Xorg binary drivers provide optimized hardware 
