--- a/debian/nvidia-glx.init.in
+++ b/debian/nvidia-glx.init.in
@@ -79,10 +79,10 @@ case "$1" in
     then
       remove_links
     fi
-    if [ -e /usr/lib/nvidia/libGL.so.1.2.xlibmesa ] ; then
-    	ln -s /usr/lib/nvidia/libGL.so.1.2.xlibmesa /usr/lib/libGL.so.1.2
+    if [ -L /usr/lib/nvidia/libGL.so.xlibmesa ] ; then
+    	ln -s /usr/lib/nvidia/libGL.so.1.2.xlibmesa /usr/lib/libGL.so
     else
-        rm -f /usr/lib/libGL.so.1.2 || true
+        rm -f /usr/lib/libGL.so || true
     fi	
     ;;
 
