--- a/debian/nvidia-glx-dev.links.in
+++ b/debian/nvidia-glx-dev.links.in
@@ -1,2 +1,2 @@
-usr/lib/libGL.so.#VERSION# usr/lib/libGL.so
+#usr/lib/libGL.so.#VERSION# usr/lib/libGL.so
 usr/share/nvidia/include /usr/share/doc/nvidia-glx-dev/include
