--- a/debian/nvidia-glx.init.in
+++ b/debian/nvidia-glx.init.in
@@ -81,6 +81,8 @@ case "$1" in
     fi
     if [ -L /usr/lib/nvidia/libGL.so.xlibmesa ] ; then
     	ln -s /usr/lib/nvidia/libGL.so.1.2.xlibmesa /usr/lib/libGL.so
+    else if [ -d /usr/share/doc/nvidia-glx-dev ] ; then
+        ln -s /usr/lib/libGL.so.#VERSION# /usr/lib/libGL.so
     else
         rm -f /usr/lib/libGL.so || true
     fi	
