--- a/debian/nvidia-glx.init.in
+++ b/debian/nvidia-glx.init.in
@@ -1,7 +1,7 @@
 #!/bin/sh
 
 PATH=/sbin:/usr/sbin:/usr/local/sbin:/bin:/usr/bin:/usr/local/bin
-VERSION="#VERSION#"
+VERSION="1.0.8774"
 
 # to force usage or non-usage of TLS libs edit /etc/defaults/nvidia-glx
 [ -e /etc/default/nvidia-glx ] && . /etc/default/nvidia-glx
@@ -79,13 +79,13 @@ case "$1" in
     then
       remove_links
     fi
-    if [ -L /usr/lib/nvidia/libGL.so.xlibmesa ] ; then
+    rm -f  /usr/lib/libGL.so || true 
+    if [ -L /usr/lib/nvidia/libGL.so.xlibmesa ] && [ -d /usr/share/doc/libgl1-mesa-dev ] ; then
     	ln -s /usr/lib/nvidia/libGL.so.1.2.xlibmesa /usr/lib/libGL.so
-    else if [ -d /usr/share/doc/nvidia-glx-dev ] ; then
+    fi
+    if [ -d /usr/share/doc/nvidia-glx-dev ] ; then
         ln -s /usr/lib/libGL.so.#VERSION# /usr/lib/libGL.so
-    else
-        rm -f /usr/lib/libGL.so || true
-    fi	
+    fi
     ;;
 
   stop) 
