remove libGL.so created by init script
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@171 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/nvidia-glx.postrm.in
+++ b/debian/nvidia-glx.postrm.in
@@ -18,6 +18,8 @@ set -e
 
 case "$1" in
     remove|purge)
+        # remove file created by init script
+    	rm /usr/lib/libGL.so || true
 	dpkg-divert --remove --rename --package nvidia-glx --divert /usr/lib/nvidia/libGL.so.1.xlibmesa /usr/lib/libGL.so.1 > /dev/null
 	dpkg-divert --remove --rename --package nvidia-glx --divert /usr/lib/nvidia/libGL.so.1.2.xlibmesa /usr/lib/libGL.so.1.2 > /dev/null
 	
